# RustedvLLM

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  lib.rs  model.rs
crates/engine/tests/: engine_test.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs  types.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  scheduler.rs
docs/: Design.md
tests/: integration_test.rs
