[package]
name = "RustedvLLM"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"

[dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
engine = { path = "crates/engine" }
protocol = { path = "crates/protocol" }
