[package]
name = "rusted-llm"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"

[dependencies]
protocol = { path = "crates/protocol" }
scheduler = { path = "crates/scheduler" }
engine = { path = "crates/engine" }
tokio = { workspace = true }


